🐛 Fix layout issues

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -27,7 +27,7 @@ body {
 
 body {
   font-family: 'Inter', sans-serif;
-  background: url(../assets/email-pattern.png);
+  background-image: url(../assets/email-pattern.png);
 }
 
 button {
